deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openid-tls-connector
  namespace: openid-tls-connector
  labels:
    app.kubernetes.io/name: openid-tls-connector
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: openid-tls-connector
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
